Revise: re-add SSH login for MacOS builds [skip appveyor]
This now happens after the package has been assembled but before it is
signed off - so that we can investigate/debug/fix the current problem with
the libzip and its now dependency on libzstd library.

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -367,6 +367,10 @@ jobs:
         DEPLOY: ${{matrix.deploy}}
         DEPLOY_PART: 1
 
+    - name: (MacOS) Stop for SSH login to CB host, login and logout to continue
+      uses: mxschmitt/action-tmate@v3
+      if: runner.os == 'macOS' && matrix.deploy == 'deploy'
+
     - name: (MacOS) package Mudlet (Part 2)
       if: runner.os == 'macOS' && matrix.deploy == 'deploy'
       run: ${{github.workspace}}/CI/travis.after_success.sh
