--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -386,9 +386,9 @@ jobs:
     - name: (macOS) Prep binary for running tests
       if: matrix.run_tests == 'true' && runner.os == 'macOS'
       run: |
-        cp ${{runner.workspace}}/b/ninja/${{env.UPLOAD_FILENAME}} ~/Desktop
+        cp ${{runner.workspace}}/b/ninja/${{env.UPLOAD_FILENAME}}.app ~/Desktop
         cd ~/Desktop
-        sudo codesign --remove-signature ${{env.UPLOAD_FILENAME}}
+        sudo codesign --remove-signature ${{env.UPLOAD_FILENAME}}.app
       shell: bash
 
     - name: (Linux) Run Lua tests
@@ -406,7 +406,7 @@ jobs:
       if: matrix.run_tests == 'true' && runner.os == 'macOS'
       timeout-minutes: 5
       shell: bash
-      run: ~/Desktop/${{env.UPLOAD_FILENAME}}/Contents/MacOS/mudlet --profile "Mudlet self-test" --mirror
+      run: ~/Desktop/${{env.UPLOAD_FILENAME}}.app/Contents/MacOS/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_BUSTED_TESTS: 'true'
         TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
