--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -34,11 +34,12 @@ jobs:
             gcc_compiler_version: 9
             qt: '5.14.2'
           - os: macos-11
-            buildname: 'macos / c++ tests'
+            buildname: 'macos / c++, lua tests'
             triplet: x64-osx
             compiler: clang_64
             qt: '5.14.2'
             deploy: 'deploy'
+            run_tests: 'true'
 #           - os: windows-2019
 #             buildname: 'windows'
 #             triplet: x64-mingw-dynamic
@@ -373,17 +374,36 @@ jobs:
       shell: bash
 
     # we need to be in the right place for LuaGlobals.lua to load
-    - name: Prep binary for running tests
-      if: matrix.run_tests == 'true'
+    - name: (Linux) Prep binary for running tests
+      if: matrix.run_tests == 'true' && runner.os =='Linux'
+      # macOS binary is in ${{runner.workspace}}/b/ninja/${{env.UPLOAD_FILENAME}}/Contents/MacOS
       run: cp ${{runner.workspace}}/b/ninja/src/mudlet ${{github.workspace}}/src
       shell: bash
 
-    - name: Run Lua tests
-      if: matrix.run_tests == 'true'
+    - name: (macOS) Prep binary for running tests
+      if: matrix.run_tests == 'true' && runner.os == 'macOS'
+      run: |
+        cp -r ${{runner.workspace}}/b/ninja/${{env.UPLOAD_FILENAME}}.app ~/Desktop
+        cd ~/Desktop
+        sudo codesign --remove-signature ${{env.UPLOAD_FILENAME}}.app
+      shell: bash
+
+    - name: (Linux) Run Lua tests
+      if: matrix.run_tests == 'true' && runner.os == 'Linux'
       timeout-minutes: 5
       uses: GabrielBB/xvfb-action@v1.6
       with:
         run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      env:
+        AUTORUN_BUSTED_TESTS: 'true'
+        TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
+        QUIT_MUDLET_AFTER_TESTS: 'true'
+
+    - name: (macOS) Run Lua tests
+      if: matrix.run_tests == 'true' && runner.os == 'macOS'
+      timeout-minutes: 5
+      shell: bash
+      run: ~/Desktop/${{env.UPLOAD_FILENAME}}.app/Contents/MacOS/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_BUSTED_TESTS: 'true'
         TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
