--- a/mudlet.desktop
+++ b/mudlet.desktop
@@ -3,8 +3,9 @@ Name=Mudlet
 X-AppInstall-Package=mudlet
 GenericName=Mud Client
 Comment=Play online text-based games (MUDs)
-Exec=mudlet
+Exec=mudlet --package %f
 Terminal=false
 Type=Application
+MimeType=application/zip
 Icon=mudlet
 Categories=Game;AdventureGame;RolePlaying;ActionGame;
