added mac and windows support for opening .mpackage files

--- a/mudlet.desktop
+++ b/mudlet.desktop
@@ -3,7 +3,7 @@ Name=Mudlet
 X-AppInstall-Package=mudlet
 GenericName=Mud Client
 Comment=Play online text-based games (MUDs)
-Exec=mudlet --package %f
+Exec=mudlet %f
 Terminal=false
 Type=Application
 MimeType=application/zip
