Add: open .mpackage files with Mudlet (#7065)
#### Brief overview of PR changes/additions
- Created `MudletServer` to keep track of Mudlet instances and allow
them to communicate.
- Added cli argument for installing a package.
- Created `FileOpenHandler` for installing packages from
`QEvent::FileOpen` events.
- Updated mudlet.desktop to associate Mudlet with .zip files on Linux.
- Created Info.plist to associate Mudlet with .mpackage files on MacOS.
- Added registry keys to associate Mudlet with .mpackage files on
Windows.
#### Motivation for adding to Mudlet
fixes #1083
/claim #1083
#### Other info (issues closed, discussion etc)
The Info.plist file needs to be copied into the app bundle for MacOS to
recognize it. I'm not sure how to do that. I found a reference to
mudlet.app in `CI/travis.osx.after_success.sh`, but I think that's just
for the CI build. Does someone know how Mudlet is installed on MacOS?
Related docs:
https://developer.apple.com/library/archive/documentation/CoreFoundation/Conceptual/CFBundles/BundleTypes/BundleTypes.html#//apple_ref/doc/uid/10000123i-CH101-SW1

## Examples
**Installing a package on an already running instance of Mudlet**


https://github.com/Mudlet/Mudlet/assets/147658676/4457e496-a24f-420f-9bc3-3a879e7e4f9f


**Queueing two packages for install by gui and cli. Displaying
connection dialogue to determine which profile the packages should be
installed on.**


https://github.com/Mudlet/Mudlet/assets/147658676/a12edeea-6973-43c8-a691-cfb4524efdb1

**If no other instance of Mudlet is open, open Mudlet and install on
first opened profile**


https://github.com/Mudlet/Mudlet/assets/147658676/662d450a-6bbd-4528-88e6-4dba674cc82e

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,7 @@ set(mudlet_SRCS
     EAction.cpp
     exitstreewidget.cpp
     FontManager.cpp
+    FileOpenHandler.cpp
     GifTracker.cpp
     TrailingWhitespaceMarker.cpp
     Host.cpp
@@ -94,6 +95,7 @@ set(mudlet_SRCS
     main.cpp
     mapInfoContributorManager.cpp
     mudlet.cpp
+    MudletInstanceCoordinator.cpp
     ShortcutsManager.cpp
     ScriptUnit.cpp
     T2DMap.cpp
@@ -238,6 +240,7 @@ set(mudlet_HDRS
     dlgVarsMainArea.h
     EAction.h
     exitstreewidget.h
+    FileOpenHandler.h
     FontManager.h
     GifTracker.h
     TrailingWhitespaceMarker.h
@@ -248,6 +251,7 @@ set(mudlet_HDRS
     LuaInterface.h
     mapInfoContributorManager.h
     mudlet.h
+    MudletInstanceCoordinator.h
     post_guard.h
     pre_guard.h
     ShortcutsManager.h
