add: automated uploads to download page (#7062)
This PR adds automated uploads for the download page of mudlet's
website.
I've forked the original plugin to support direct uploads from the
endpoint and added API Token authentication for security.

### Prequisites:
- [Plugin Fork](https://github.com/neo773/wp-downloadmanager/tree/api)
- `X_WP_DOWNLOAD_TOKEN` to be set a GitHub secret

<img width="1034" alt="image"
src="https://github.com/Mudlet/Mudlet/assets/62795688/8ca6b3c2-403c-4bd3-b9c1-843aa8aa0208">


<img width="1159" alt="image"
src="https://github.com/Mudlet/Mudlet/assets/62795688/a7470b3c-1279-4d68-a07b-49693137f732">


<img width="267" alt="image"
src="https://github.com/Mudlet/Mudlet/assets/62795688/38186f42-5532-4609-a48b-86bf2fd0b326">



/claim #6097

---------

Co-authored-by: Vadim Peretokin <vperetokin@hey.com>

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -353,6 +353,7 @@ jobs:
       env:
         BUILD_FOLDER: ${{runner.workspace}}/b/ninja
         RUNNER_OS: ${{runner.os}}
+        X_WP_DOWNLOAD_TOKEN: ${{secrets.X_WP_DOWNLOAD_TOKEN}}
         DEPLOY: ${{matrix.deploy}}
         DBLSQD_USER: ${{secrets.DBLSQD_USER}}
         DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
