--- a/CI/org.mudlet.mudlet.yml
+++ b/CI/org.mudlet.mudlet.yml
@@ -4,7 +4,7 @@ runtime-version: '5.15-23.08'
 sdk: org.kde.Sdk
 command: mudlet
 # buggy - see https://github.com/flathub/org.flatpak.Builder/issues/138
-# rename-desktop-file: mudlet.desktop
+rename-desktop-file: mudlet.desktop
 finish-args:
   - --share=ipc
   - --socket=x11
