Update base image to better match our runtime

--- a/.github/workflows/build-mudlet-flatpak.yml
+++ b/.github/workflows/build-mudlet-flatpak.yml
@@ -12,7 +12,7 @@ jobs:
     name: "Flatpak"
     runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:gnome-44
+      image: bilelmoussaoui/flatpak-github-actions:kde-5.15-23.08
       options: --privileged
     steps:
     - uses: actions/checkout@v4
