--- a/.github/workflows/build-mudlet-flatpak.yml
+++ b/.github/workflows/build-mudlet-flatpak.yml
@@ -15,7 +15,11 @@ jobs:
       image: bilelmoussaoui/flatpak-github-actions:kde-5.15-23.08
       options: --privileged
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Mudlet source code
+      uses: actions/checkout@v4
+      with:
+        submodules: true
+        fetch-depth: 0
     - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: mudlet.flatpak
