Add verbose key

--- a/.github/workflows/build-mudlet-flatpak.yml
+++ b/.github/workflows/build-mudlet-flatpak.yml
@@ -26,3 +26,4 @@ jobs:
         manifest-path: CI/org.mudlet.mudlet.yml
         branch: development
         cache-key: flatpak-builder-${{ github.sha }}
+        verbose: true
