--- a/CI/org.mudlet.mudlet.yml
+++ b/CI/org.mudlet.mudlet.yml
@@ -4,7 +4,7 @@ runtime-version: '5.15-23.08'
 sdk: org.kde.Sdk
 command: mudlet
 rename-desktop-file: mudlet.desktop
-rename-icon: mudlet.png
+rename-icon: mudlet
 finish-args:
   - --share=ipc
   - --socket=x11
@@ -12,7 +12,6 @@ finish-args:
   - --device=dri
   - --socket=pulseaudio
   - --share=network
-# start with no sandboxing for now
   - --filesystem=home
 
 cleanup:
