Default to Wayland

--- a/CI/org.mudlet.mudlet.yml
+++ b/CI/org.mudlet.mudlet.yml
@@ -7,7 +7,7 @@ rename-desktop-file: mudlet.desktop
 rename-icon: mudlet
 finish-args:
   - --share=ipc
-  - --socket=x11
+  - --socket=fallback-x11
   - --socket=wayland
   - --device=dri
   - --socket=pulseaudio
