--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -637,7 +637,7 @@ if(UNIX AND NOT APPLE)
     PATTERN ".git" EXCLUDE PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
                                        WORLD_READ)
   install(
-    FILES "../mudlet.desktop"
+    FILES "../org.mudlet.mudlet.desktop"
     DESTINATION "share/applications" PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       WORLD_READ)
   install(
