--- a/CI/org.mudlet.mudlet.yml
+++ b/CI/org.mudlet.mudlet.yml
@@ -3,6 +3,7 @@ runtime: org.kde.Platform
 runtime-version: '5.15-23.08'
 sdk: org.kde.Sdk
 command: mudlet
+rename-desktop-file: mudlet.desktop
 rename-icon: mudlet
 finish-args:
   - --share=ipc
