--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -237,12 +237,10 @@ jobs:
          echo "WITH_3DMAPPER=no" >> $GITHUB_ENV
          echo "WITH_FONTS=no" >> $GITHUB_ENV
 
-    # workaround for broken clang on ubuntu runner until https://github.com/actions/runner-images/issues/8659 get fixed
-    - name: (Linux Clang) workaround for broken clang in github runner image
-      uses: mjp41/workaround8649@7929373c0fe5caf844d8115adccef39e3b5362e7
-      if: runner.os == 'Linux' && matrix.compiler == 'clang_64'
-      with:
-        os: ${{ matrix.os }}
+         # workaround https://github.com/actions/runner-images/issues/8659
+         echo "TEMPORARY WORKAROUND FOR GITHUB RUNNER BUG #8659\n\nRemoving GCC 13 as it breaks Clang14"
+         sudo apt-get purge -y g++-13 gcc-13 libstdc++-13-dev
+         sudo apt-get install -y --allow-downgrades libstdc++-12-dev libstdc++6=12.* libgcc-s1=12.*
 
     - name: (Linux/macOS) restore ccache
       uses: pat-s/always-upload-cache@v3.0.11
