added the changes requested

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -436,7 +436,7 @@ jobs:
           cat "${{runner.workspace}}/b/ninja/CMakeFiles/CMakeOutput.log"
         }
 
-    - name: Create PR to update development
+    - name: Create PR to update developement
       if: github.event_name == 'push' && (github.event_name == 'developement' || startsWith(github.ref, 'refs/tags/Mudlet-'))
       run: |
         git checkout development
@@ -461,3 +461,5 @@ jobs:
         gh pr create --base development --head update-development-${{ github.run_number }} --title "Update development-${{ github.run_number }}" --body "Automatically generated PR to update development with release  ${{ env.APP_VERSION }} "
 
         git checkout developement
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
