--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -1,9 +1,9 @@
 name: Automatic PR for Development Update
 
 on:
-  push:
-    tags:
-      - 'refs/tags/Mudlet-*'
+  create:
+    branches:
+      - 'release-*'
 
 jobs:
   create-pr:
