--- a/mudlet.desktop
+++ b/mudlet.desktop
@@ -6,6 +6,6 @@ Comment=Play online text-based games (MUDs)
 Exec=mudlet %f
 Terminal=false
 Type=Application
-MimeType=application/zip;
+MimeType=x-scheme-handler/telnet;application/zip;
 Icon=mudlet
 Categories=Game;AdventureGame;RolePlaying;ActionGame;
