Infrastructure: add flatpak support (#6494)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Add flatpak support
#### Motivation for adding to Mudlet
AppImage alternative and possibly better Steam Deck support
#### Other info (issues closed, discussion etc)
Sound works!

---------

Co-authored-by: Vadim Peretokin <vadim.peretokin@carasent.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -643,6 +643,19 @@ if(UNIX AND NOT APPLE)
       WORLD_READ)
 
   install(
+    FILES "../mudlet.desktop"
+    DESTINATION "share/applications" PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
+      WORLD_READ)
+  install(
+    FILES "../mudlet.svg"
+    DESTINATION "share/icons/hicolor/scalable/apps" PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
+    WORLD_READ)
+  install(
+    FILES "../mudlet.png"
+    DESTINATION "share/icons/hicolor/256x256/apps" PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
+    WORLD_READ)
+
+  install(
     TARGETS mudlet
     RUNTIME
       DESTINATION "bin"
