--- a/.github/workflows/build-mudlet-flatpak2.yml
+++ b/.github/workflows/build-mudlet-flatpak2.yml
@@ -3,10 +3,8 @@ name: 📦 Build Mudlet Flatpak Repo
 on:
   push:
     branches:
-      - main
+      - development
   pull_request:
-    branches:
-      - main
   schedule:
     - cron: '0 0 * * *'  # Scheduled run, e.g., daily at midnight
 
