--- a/.github/workflows/build-mudlet-flatpak2.yml
+++ b/.github/workflows/build-mudlet-flatpak2.yml
@@ -8,12 +8,9 @@ on:
 
 env:
   APP_ID: org.mudlet.mudlet
-  MANIFEST_PATH: ${{ github.workspace }}/CI/${{ env.APP_ID }}.yaml
-  BUNDLE: "${{ env.APP_ID }}.flatpak"
   DOCKER_REGISTRY: "docker.io/bilelmoussaoui/flatpak-github-actions"
   RUNTIME_NAME: "kde"
   RUNTIME_VERSION: "5.15-23.08"
-  DOCKER_IMAGE: ${{ env.DOCKER_REGISTRY }}:${{ env.RUNTIME_NAME }}-${{ env.RUNTIME_VERSION }}
   GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
   GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
@@ -22,7 +19,7 @@ jobs:
   build-flatpak:
     runs-on: ubuntu-latest
     container:
-      image: ${{ env.DOCKER_IMAGE }}
+      image: docker.io/bilelmoussaoui/flatpak-github-actions:kde-5.15-23.08
     steps:
     - name: Checkout Mudlet source code
       uses: actions/checkout@v4
@@ -33,21 +30,27 @@ jobs:
       run: |
         flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
     - name: Setup GPG
+      env:
+        GPG_KEY_GREP: ${{ secrets.GPG_KEY_GREP }}
       run: |
         gpg --list-keys --with-keygrip
         echo "allow-preset-passphrase" >> ~/.gnupg/gpg-agent.conf
         gpg-connect-agent reloadagent /bye
-        echo ${{ env.GPG_PASSPHRASE }} | /usr/libexec/gpg-preset-passphrase --preset ${{ env.GPG_KEY_GREP }}
-        gpg --import --batch ${{ env.GPG_PRIVATE_KEY }}
+        echo $GPG_PASSPHRASE | /usr/libexec/gpg-preset-passphrase --preset $GPG_KEY_GREP
+        gpg --import --batch $GPG_PRIVATE_KEY
     - name: Build and Install Flatpak
+      env:
+        MANIFEST_PATH: ${{ github.workspace }}/CI/${{ env.APP_ID }}.yaml
       run: |
-        flatpak-builder build --user --install-deps-from=flathub --gpg-sign=${{ env.GPG_KEY_ID }} --disable-rofiles-fuse --disable-updates --force-clean --repo=repo ${{ env.MANIFEST_PATH }}
+        flatpak-builder build --user --install-deps-from=flathub --gpg-sign=$GPG_KEY_ID --disable-rofiles-fuse --disable-updates --force-clean --repo=repo $MANIFEST_PATH
     - name: Generate Flatpak Bundle
+      env:
+        BUNDLE: "${{ env.APP_ID }}.flatpak"
       run: |
-        flatpak build-bundle --gpg-sign=${{ env.GPG_KEY_ID }} repo ${{ env.BUNDLE }} --runtime-repo=https://flathub.org/repo/flathub.flatpakrepo ${{ env.APP_ID }}
+        flatpak build-bundle --gpg-sign=$GPG_KEY_ID repo $BUNDLE --runtime-repo=https://flathub.org/repo/flathub.flatpakrepo ${{ env.APP_ID }}
     - name: Update Flatpak Repo
       run: |
-        flatpak build-update-repo --gpg-sign=${{ env.GPG_KEY_ID }} --generate-static-deltas --prune repo/
+        flatpak build-update-repo --gpg-sign=$GPG_KEY_ID --generate-static-deltas --prune repo/
     - name: Upload Repo
       uses: actions/upload-artifact@v4
       with:
@@ -71,4 +74,5 @@ jobs:
     - name: Prepare GitHub Pages Deployment
       run: |
         mkdir public
-        rsync -av --exclude='public' --exclude='.git
+        rsync -av --exclude='public' --exclude='.git' . public/
+        # Add additional deployment steps here
