--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -75,7 +75,7 @@ jobs:
         version: ${{matrix.qt}}
         dir: ${{runner.workspace}}
         cache: true
-        modules: qt5compat
+        modules: qt5compat qtmultimedia
 
     - name: Restore Boost cache
       uses: actions/cache@v4
