Try building with AddressSanitizer by default

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -281,6 +281,7 @@ jobs:
           -G Ninja
           -DCMAKE_PREFIX_PATH=${{env.MINGW_BASE_DIR}}
           -DVCPKG_APPLOCAL_DEPS=OFF
+          -DUSE_SANITIZER=Address
       env:
         NINJA_STATUS: '[%f/%t %o/sec] '
 
