Add gpg to first flatpak workflow

--- a/.github/workflows/build-mudlet-flatpak2.yml
+++ b/.github/workflows/build-mudlet-flatpak2.yml
@@ -43,6 +43,7 @@ jobs:
         manifest-path: CI/org.mudlet.mudlet.yml
         cache-key: flatpak-builder-${{ github.sha }}
         gpg-sign: ${{ secrets.GPG_KEY_ID }}
+        verbose: true
 
     - name: Update Flatpak Repo
       run: |
