--- a/.github/workflows/build-mudlet-flatpak.yml
+++ b/.github/workflows/build-mudlet-flatpak.yml
@@ -20,9 +20,22 @@ jobs:
       with:
         submodules: true
         fetch-depth: 0
+    - name: Setup GPG
+      env:
+        GPG_KEY_GREP: ${{ secrets.GPG_KEY_GREP }}
+        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
+      run: |
+        gpg --list-keys --with-keygrip
+        echo "allow-preset-passphrase" >> ~/.gnupg/gpg-agent.conf
+        gpg-connect-agent reloadagent /bye
+        echo $GPG_PASSPHRASE | /usr/libexec/gpg-preset-passphrase --preset $GPG_KEY_GREP
+        echo -n "$GPG_PRIVATE_KEY" | base64 --decode | gpg --import --batch
     - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: mudlet.flatpak
         manifest-path: CI/org.mudlet.mudlet.yml
         cache-key: flatpak-builder-${{ github.sha }}
         verbose: true
+        gpg-sign: ${{ secrets.GPG_KEY_ID }}
